# masteroids

./: .gitignore  LICENSE  Masteroids.cabal  README.md  masteroids.cabal  stack.yaml
.circleci/: config.yml
dist-newstyle/cache/: config
src/: Assets.hs  Constants.hs  GameState.hs  HandleInput.hs  Main.hs  Newtypes.hs  Physics.hs  ProgressGameState.hs  Render.hs  SoundEffects.hs  Vector.hs
src/PlayerActions/: FireLaser.hs
src/ProgressGameState/: Collisions.hs
src/Systems/: AcceleratePlayer.hs  ApplySpin.hs  ApplyVelocities.hs  BorderPatrol.hs  HandleCollisions.hs  HandleZeroHP.hs  SetPlayerAngle.hs
src/Systems/Collisions/: BounceEntities.hs  TakeLaserDamage.hs
test/: PropertyBasedTestsMain.hs
test/Properties/: Physics.hs
