name:                Masteroids
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/axelulmestig/masteroids#readme
license:             BSD3
license-file:        LICENSE
author:              Axel Ulmestig
maintainer:          axel.ulmestig@gmail.com
copyright:           2020 Axel Ulmestig
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable masteroids
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
  other-modules:       Vector,
                       Assets,
                       GameState,
                       HandleInput,
                       ProgressGameState,
                       Render
  build-depends:       base >= 4.7 && < 5,
                       gloss >= 1.13,
                       lens,
                       containers
