name:                Masteroids
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/axelulmestig/masteroids#readme
license:             BSD3
license-file:        LICENSE
author:              Axel Ulmestig
maintainer:          axel.ulmestig@gmail.com
copyright:           2020 Axel Ulmestig
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable masteroids
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
  other-modules:       Physics,
                       Assets,
                       GameState,
                       HandleInput,
                       ProgressGameState,
                       Render,
                       Systems.AcceleratePlayer,
                       Systems.ApplySpin,
                       Systems.ApplyVelocities,
                       Systems.BorderPatrol,
                       Systems.HandleCollisions,
                       Systems.HandleZeroHP,
                       Systems.SetPlayerAngle,
                       Systems.Collisions.TakeLaserDamage,
                       Systems.Collisions.BounceEntities,
                       PlayerActions.FireLaser,
                       Constants
  build-depends:       base >= 4.7 && < 5,
                       gloss >= 1.13,
                       lens,
                       containers

test-suite properties
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             PropertyBasedTestsMain.hs
  build-depends:       base,
                       test-framework,
                       test-framework-quickcheck2,
                       QuickCheck >= 2.0
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -Wall -Wno-orphans
  other-modules:       Physics,
                       Properties.Physics
