name:                masteroids
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/masteroids#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable masteroids
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
  other-modules:       Vector,
                       Assets,
                       GameState,
                       HandleInput,
                       ProgressGameState,
                       Render
  build-depends:       base >= 4.7 && < 5,
                       gloss >= 1.13,
                       lens
